# SnapCaloriesAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0d66cc9e1b1a_initial.py  1c0830a92cf3_add_user_goals.py  3efd10f009b0_add_meal_plans.py  4c1e66dec216_add_user_profile_fields.py  9d6eaddaaf91_add_photo_path_and_raw_response.py  a1b2c3d4e5f6_add_pgvector_embedding.py  f48f2cac1c85_confirm_all_existing_meals.py
bot/: __main__.py  config.py  constants.py
bot/handlers/: callbacks.py  goal.py  history.py  menu.py  photo.py  report.py  start.py  states.py  text.py
bot/keyboards/: common.py  meal.py
bot/middlewares/: album.py  db.py  user.py
bot/models/: __init__.py  base.py  meal.py  meal_plan.py  user.py
bot/services/: embedding.py  meal_plan.py  nutrition.py  prompts.py  stats.py
bot/services/vision/: __init__.py  base.py  factory.py  gemini.py  openai_compat.py
bot/utils/: charts.py  formatters.py
docs/: setup-guide.md
prompts/: analyze_photo.j2  daily_summary.j2  execute_suggestion.j2  free_question.j2  period_report.j2  plan_menu.j2  refine_meal.j2  suggest_alternatives.j2  suggest_menu.j2  weekly_menu.j2
scripts/: backfill_embeddings.py  migrate_sqlite_to_postgres.py
